--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prisma</title>
+    <title>Prisma - SuperClase</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <script>
@@ -14,33 +15,36 @@
               primary: '#3b82f6',
               secondary: '#f97316',
               accent: '#8b5cf6',
-              school: '#2563eb', // Blue
-              home: '#ea580c',   // Orange/Warm
+              school: '#2563eb',
+              home: '#ea580c',
             }
           }
         }
       }
     </script>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "path": "https://esm.sh/path@^0.12.7",
-    "url": "https://esm.sh/url@^0.11.4",
-    "http": "https://esm.sh/http@^0.0.1-security",
+    "react-dom": "https://esm.sh/react-dom@^19.2.3",
     "socket.io-client": "https://esm.sh/socket.io-client@^4.8.1",
-    "socket.io": "https://esm.sh/socket.io@^4.8.1",
     "sqlite3": "https://esm.sh/sqlite3@^5.1.7",
+    "sqlite": "https://esm.sh/sqlite@^5.1.1",
     "express": "https://esm.sh/express@^5.2.1",
-    "sqlite": "https://esm.sh/sqlite@^5.1.1"
+    "http": "https://esm.sh/http@^0.0.1-security",
+    "socket.io": "https://esm.sh/socket.io@^4.8.1",
+    "path": "https://esm.sh/path@^0.12.7",
+    "url": "https://esm.sh/url@^0.11.4"
   }
 }
 </script>
-</head>
+  </head>
   <body class="bg-gray-50 text-gray-900">
     <div id="root"></div>
+    <!-- Punto de entrada de la aplicación -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
